# todo_ai

./: .gitignore  Makefile  README.md
.claude/: settings.local.json
todoai-backend/: .gitignore  README.md  pyproject.toml
todoai-backend/ai/: pyproject.toml
todoai-backend/ai/src/todoai_ai/: chat.py  schemas.py  utils.py
todoai-backend/ai/src/todoai_ai/tools/: create_task_tool.py  current_date_tools.py  delete_task_tool.py  get_bookings_tool.py  join_waitinglist_tool.py  list_tasks_tool.py  save_booking_tool.py  table_availability_tool.py  update_task_tool.py
todoai-backend/api/: .env.example  alembic.ini  pyproject.toml
todoai-backend/api/alembic/: env.py
todoai-backend/api/alembic/versions/: e79b5b2d3dfb_geneate_migrations.py
todoai-backend/api/src/todoai_api/: config.py  dependencies.py  main.py
todoai-backend/api/src/todoai_api/routers/: ai.py  auth.py  calendar.py  tasks.py  users.py
todoai-backend/api/src/todoai_api/services/: auth_service.py  calendar_service.py  task_service.py
todoai-backend/common/: pyproject.toml
todoai-backend/common/src/todoai_common/: database.py  enums.py
todoai-backend/common/src/todoai_common/models/: __init__.py  task.py  task_share.py  user.py
todoai-backend/common/src/todoai_common/schemas/: auth.py  task.py  user.py
todoai-frontend/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
todoai-frontend/src/: auth.ts  middleware.ts
todoai-frontend/src/app/: layout.tsx
todoai-frontend/src/lib/: utils.ts
todoai-frontend/src/store/: index.ts
todoai-frontend/src/types/: event-calendar.d.ts  next-auth.d.ts  task.ts
(+25 files in other folders)
