[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todoai-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-sdk>=0.3.12",
    "langsmith>=0.7.26",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.13.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todoai_ai"]
