[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todoai-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg[binary]>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todoai_common"]
